# robot_description

./: CMakeLists.txt  README.md  package.xml
launch/: load_urdf.launch.py  rviz.launch.py
test/: test_xacro.py
urdf/: robot.urdf.xacro  robot_xl.urdf.xacro
urdf/common/: ros2_control.urdf.xacro
urdf/robot/: body.urdf.xacro  rosbot_macro.urdf.xacro  wheel.urdf.xacro
urdf/robot_xl/: body.urdf.xacro  robot_xl_macro.urdf.xacro  rosbot_xl_macro.urdf.xacro  wheel.urdf.xacro
urdf/robot_xl/components/: antenna.urdf.xacro  camera_mount.urdf.xacro
